--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.dlsu.mobapde.labfirebaseposts2">
+    package="edu.dlsu.mobapde.fbbravo">
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="edu.dlsu.mobapde.firebasebravo.ViewPostActivity" />
     </application>
 
 </manifest>
